# llmseo-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/llmseo/: __init__.py  audit.py  cli.py  llm_txt.py  utils.py  web.py
tests/: test_query_alignment.py  test_utils.py
